# MLVectorDB

./: .gitignore  Dockerfile  README.md  REPLICATION_SHARDING.md  SHARDING_TESTING_PLAN.md  TESTING_PLAN.md  docker-compose.yml  pyproject.toml
examples/: api_client.py  replication_sharding_example.py
src/mlvectordb/: __init__.py
src/mlvectordb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mlvectordb/api/: __init__.py  main.py  models.py  rest_api.py  server.py
src/mlvectordb/implementations/: __init__.py  basic_query_processor.py  index.py  query_processor.py  query_processor_with_replication.py  replication_manager.py  sharding_manager.py  simple_vector.py  storage_engine_in_memory.py  vector.py
src/mlvectordb/interfaces/: __init__.py  index.py  query_processor.py  replication.py  sharding.py  storage_engine.py  vector.py
tests/: test_api.py  test_index.py  test_interfaces.py  test_query_processor.py  test_storage_engine_in_memory.py  test_vector.py
