[tool.poetry]
name = "vectordb"
version = "0.1.0"
description = "Vector database project for university"
authors = ["Nolasar", "SudYar"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.117.1"
numpy = "^2.3.3"
hnswlib = "^0.8.0"
uvicorn = "^0.38.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^25.9.0"
isort = "^6.0.1"
mypy = "^1.18.2"
